thread logik wieder eingeführt, nur noch ein kleiner fehler, vermutlich kurz vor dem zufahren wo es keine Ausgabe gibt